--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+html, body{
+  margin: .625rem;
+  background-color: var(--surface-b);
+  font-family: var(--font-family);
+}
+.text-layout{
+  color: var(--text-color);
+}
